# open-cytomat

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  run-checks  run-formatting  setup.cfg  setup.py  shell.nix
docs/: Makefile  conf.py  index.rst
docs/_static/css/: autodoc-multiline-signatures.css  py-documentation-rtd.css
src/: tests.py
src/cytomat/: __init__.py  barcode_scanner.py  climate_controller.py  convert_steps.py  cytomat.json  cytomat.py  errors.py  maintenance_controller.py  parameters.py  plate_handler.py  sample_config.json  sample_configs.json  serial_port.py  shaker_controller.py  status.py  swap_station.py  utils.py
src/cytomat/data/: sample_config.json
src/cytomat/scripts/: setup_cytomat.py
src/cytomat/tests/: basic_tests.py  test_comm.py  test_status.py
src/cytomat_python/: __init__.py  barcode_scanner.py  climate_controller.py  cytomat.py  errors.py  maintenance_controller.py  plate_handler.py  serial_port.py  shaker_controller.py  status.py  swap_station.py  utils.py
