[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
fast = true

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E501"

[[tool.mypy.overrides]]
module = [
    "serial",
]
ignore_missing_imports = true
