[tool.poetry]
name = "cytomat-tests"
version = "0.4.2"
description = ""
authors = ["Thiago Meyer <tiagmey@gmail.com>"]
readme = "README.md"
packages = [{include = "cytomat", from = "src"}]
include = [{ path = "src/cytomat/sample_config.json"}]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"

[tool.poetry.scripts]
post_install = "cytomat.post_install:post_install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
ignore_missing_imports = true