[tool.poetry]
name = "open-cytomat"
version = "0.2.0"
description = ""
authors = ["Niklas Mertsch <niklas.mertsch@stud.uni-goettingen.de>"
	  ,"rsoeldner <r.soeldner@gmail.com>"
	  ,"Thiago Meyer <tiagmey@gmail.com>"]
readme = "README.md"
packages = [{include = "cytomat", from = "src"}]
include = [{ path = "src/cytomat/data/sample_config.json"}]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"

[tool.poetry.scripts]
post_install = "cytomat.post_install:post_install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.isort]
profile = "black"
