[metadata]
name = open-cytomat
version = 0.0.1
author = Niklas Mertsch
author_email = niklas.mertsch@stud.uni-goettingen.de
description = Unofficial Python interface to Thermo Fisher Scientific Cytomat devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.gwdg.de/umg-pharma-lab-automation/cytomat-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    bitarray
    importlib-metadata; python_version < '3.8'
    pyserial

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8
docs =
    sphinx
    sphinxcontrib-napoleon

[options.packages.find]
where = src
